template/hello-world/hello-world-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: hello-world
  name: hello-world
